--- a/index.html
+++ b/index.html
@@ -1,501 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>datafreak79.ch</title>
+Ändern Sie einfach den Pfad im link-Element. Ersetzen Sie:
 
-  <!-- Favicon / Icon-Datei -->
-  <!-- Pfad anpassen, wenn du die Datei umbenennst oder in einem Unterordner hast -->
-  <link rel="icon" type="image/png" href="Icon%20Website.png" />
+--------------------------------------------------
+<link rel="icon" type="image/png" href="Icon%20Website.png" />
+--------------------------------------------------
 
-  <!-- Google Fonts: Montserrat -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+durch
 
-  <style>
-    /* Grundlegende Body-Einstellungen */
-    body {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 20px;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-      color: #333;
-    }
+--------------------------------------------------
+<link rel="icon" type="image/png" href="favicon.png" />
+--------------------------------------------------
 
-    /* Um Banner + Header zu fixieren, packen wir sie in ein DIV-Container (#fixed-top) */
-    #fixed-top {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 9999; /* Ganz vorne anzeigen */
-    }
-
-    /* Oberster Bereich (Copyright-Banner) */
-    #top-banner {
-      background-color: #007acc;
-      color: #fff;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 1rem;
-    }
-
-    /* Header darunter */
-    header {
-      background-color: #007acc;
-      color: white;
-      padding: 20px;
-    }
-
-    /* Damit Banner und Header normal im #fixed-top liegen können, ohne verschoben zu sein */
-    #top-banner, header {
-      position: static;
-    }
-
-    /* Container im Header */
-    .header-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 1200px;
-      margin: auto;
-      flex-wrap: wrap;
-    }
-
-    .logo {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-
-    /* Button "Mobile Version" */
-    .btn-mobile-version {
-      background-color: #005f99;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      margin: 10px 0;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 1.1rem;
-    }
-
-    /* Navigation */
-    nav ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      display: flex;
-    }
-    nav ul li {
-      margin: 0 5px;
-    }
-    nav ul li a {
-      display: inline-block;
-      padding: 12px 20px;
-      background-color: #005f99;
-      color: #fff;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 1.1rem;
-      transition: background-color 0.3s;
-    }
-    nav ul li a:hover,
-    nav ul li a.active {
-      background-color: #004f80;
-    }
-
-    /* Hamburger-Icon bleibt sichtbar, um das Menü komplett anzuzeigen */
-    .nav-toggle {
-      cursor: pointer;
-      font-size: 1.5rem;
-    }
-
-    /* Im mobilen Modus werden standardmäßig nur der aktive Button angezeigt */
-    body.mobile-mode nav ul li {
-      display: none;
-    }
-    body.mobile-mode nav ul li.active {
-      display: block;
-    }
-
-    /* Hauptbereich:
-       Da Banner + Header fixiert sind, muss der Inhalt darunter
-       entsprechend nach unten rutschen (margin-top).
-       Passe 220px an, wenn dein Banner+Header größer/kleiner ist. */
-    main {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 20px;
-      margin-top: 220px; /* Platz für #fixed-top */
-    }
-
-    main section {
-      display: none;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    /* Hintergrundfarben pro Abschnitt */
-    #ueber-mich { background-color: #fff9e6; }
-    #hobby      { background-color: #e6f7ff; }
-    #projekte   { background-color: #e6f7ff; }
-    #links      { background-color: #fff9e6; }
-    #cv         { background-color: #e6ffea; }
-    #diplome    { background-color: #ffe6f9; }
-    #zeugnisse  { background-color: #e6f7ff; }
-    #kontakt    { background-color: #ffe6e6; }
-
-    h2 {
-      font-size: 2.5rem;
-      margin-top: 0;
-    }
-
-    /* Responsive Verhalten */
-    @media (max-width: 768px) {
-      nav ul {
-        flex-direction: column;
-      }
-      nav ul li {
-        margin: 5px 0;
-      }
-      nav ul li a {
-        padding: 6px 12px;
-        font-size: 1rem;
-      }
-    }
-
-    /* Anpassungen im Mobile Mode */
-    body.mobile-mode .header-content {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
-  </style>
-</head>
-<body>
-
-<!-- Fixierter Bereich: Banner + Header -->
-<div id="fixed-top">
-  <!-- Neuer oberster Bereich -->
-  <div id="top-banner">
-    &copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn
-  </div>
-
-  <header>
-    <div class="container header-content">
-      <!-- Titel/Logo -->
-      <div class="logo">datafreak79.ch</div>
-
-      <!-- Button "Mobile Version" -->
-      <button class="btn-mobile-version" onclick="toggleMobileMode()">Mobile Version</button>
-
-      <!-- Hamburger-Icon -->
-      <div class="nav-toggle" onclick="toggleMenu()">&#9776;</div>
-      
-      <nav>
-        <ul id="nav-list">
-          <li id="nav-ueber-mich"><a href="#" onclick="showSection('ueber-mich'); return false;">Über mich</a></li>
-          <li id="nav-hobby"><a href="#" onclick="showSection('hobby'); return false;">Hobby</a></li>
-          <li id="nav-projekte"><a href="#" onclick="showSection('projekte'); return false;">Projekte</a></li>
-          <li id="nav-links"><a href="#" onclick="showSection('links'); return false;">Links</a></li>
-          <li id="nav-cv"><a href="#" onclick="showSection('cv'); return false;">CV</a></li>
-          <li id="nav-diplome"><a href="#" onclick="showSection('diplome'); return false;">Diplome</a></li>
-          <li id="nav-zeugnisse"><a href="#" onclick="showSection('zeugnisse'); return false;">Zeugnisse</a></li>
-          <li id="nav-kontakt"><a href="#" onclick="showSection('kontakt'); return false;">Kontakt</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-</div>
-
-<main>
-  <!-- Über mich -->
-  <section id="ueber-mich">
-    <div class="container">
-      <h2>Über mich</h2>
-      <p>
-        Gemeinsam mit meiner Partnerin und unserem Hund lebe ich in einem
-        Doppeleinfamilienhaus in Koppigen. Ich bin ein Mensch, der immer in
-        Bewegung ist – es muss stets etwas los sein. Sport betreibe ich recht
-        viel, wobei dies in letzter Zeit etwas zu kurz gekommen ist.
-      </p>
-      <p>
-        Mit über 45 Jahren bin ich als Projektleiter in der Infrastruktur
-        für Verteilnetze tätig und habe mich entschieden, mich intensiver
-        mit Daten zu beschäftigen. In meiner aktuellen Rolle kann ich meine
-        Leidenschaft für Daten und Programmierung nur eingeschränkt ausleben,
-        was mir in den vergangenen Monaten immer bewusster wurde.
-      </p>
-      <p>
-        Die Fähigkeiten, die ich im Weiterbildungskurs
-        <em>Data Scientist NDK HF</em> erworben habe, möchte ich nun in
-        die Praxis umsetzen. Seit ich 2019 beim Hausbau meine erste
-        Excel-Makrodatei zur Erstellung des Elektroinstallationsmaterials
-        entwickelt habe, bin ich fasziniert von Daten und Programmierung.
-      </p>
-      <p>
-        Nachdem ich lange Zeit nur mit VBA gearbeitet hatte, begann ich 2022
-        damit, mich intensiv mit Power BI und Power Query zu beschäftigen.
-        Dabei entstand unter anderem eine App zur Abfrage meiner persönlichen
-        Bankdaten (via CSV-Stammdaten). Im Herbst 2023 entschied ich mich für
-        den Lehrgang <em>Data Scientist NDK HF</em> und entdeckte dabei die
-        faszinierende Welt von SQL und R.
-      </p>
-      <p>
-        In meiner Freizeit beschäftige ich mich nicht nur mit Daten, sondern
-        lerne auch Sprachen – aktuell Englisch und Französisch – und entwickle
-        begeistert Shiny-Apps. Ein Prototyp zum Sprachenlernen ist bereits
-        online verfügbar (siehe <a href="#" onclick="showSection('projekte'); return false;">Projekte</a>).
-      </p>
-    </div>
-  </section>
-
-  <!-- Hobby -->
-  <section id="hobby">
-    <div class="container">
-      <h2>unser Goldschatz</h2>
-      <p><strong>Foxred Labrador Toska</strong></p>
-      <img src="Toska.JPG" alt="Toska" style="max-width:100%; height:auto; display:block; margin:0 auto;">
-    </div>
-  </section>
-
-  <!-- Projekte -->
-  <section id="projekte">
-    <div class="container">
-      <h2>Projekte</h2>
-      <p>
-        <strong>Sprachapp (R-Shiny)</strong><br>
-        Diese App wurde in RStudio entwickelt und ermöglicht Übersetzungen in
-        vier Sprachen (Englisch, Französisch, Spanisch, Italienisch). Vokabeln
-        können in selbst erstellbaren Sammlungen abgespeichert werden.
-      </p>
-      <p>
-        <a href="Lernvideo_Sprachapp.mp4" target="_blank">
-          Lernvideo zur Sprachapp
-        </a> (MP4-Datei)
-      </p>
-      <p>
-        <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/">
-          Sprachapp (R-Shiny Desktop-Version)
-        </a>
-      </p>
-      <p>
-        <strong>Blog "Road to Exeter"</strong><br>
-        Hier dokumentiere ich meine Fortschritte beim Englischlernen und berichte
-        über meine Erfahrungen in Exeter (Link ggf. ergänzen).
-      </p>
-    </div>
-  </section>
-
-  <!-- Links -->
-  <section id="links">
-    <div class="container">
-      <h2>Links</h2>
-      <ul>
-        <li>
-          <strong>Englisch:</strong>
-          <a href="https://exeteracademy.co.uk/" target="_blank">
-            Exeter Academy
-          </a>
-          – Sprachschule in Exeter für Englischunterricht
-        </li>
-        <li>
-          <strong>R for Data Science (Hadley Wickham):</strong>
-          <a href="https://r4ds.had.co.nz/" target="_blank">
-            https://r4ds.had.co.nz/
-          </a>
-          – Umfangreiches Online-Buch zu R, Datenanalyse und Visualisierung
-        </li>
-        <li>
-          <strong>Kaggle:</strong>
-          <a href="https://www.kaggle.com/" target="_blank">
-            https://www.kaggle.com/
-          </a>
-          – Plattform für Data-Science-Wettbewerbe, Datasets und Tutorials
-        </li>
-        <li>
-          <strong>Towards Data Science:</strong>
-          <a href="https://towardsdatascience.com/" target="_blank">
-            https://towardsdatascience.com/
-          </a>
-          – Sammlung von Artikeln zu Machine Learning, Python, R und mehr
-        </li>
-      </ul>
-    </div>
-  </section>
-
-  <!-- CV -->
-  <section id="cv">
-    <div class="container">
-      <h2>Lebenslauf (CV)</h2>
-      <p>
-        Hier findest du meinen aktuellen Lebenslauf als PDF:
-      </p>
-      <p>
-        <a href="#" onclick="loadPDF('Lebenslauf_2025.pdf', 'pdfViewer'); return false;">
-          Lebenslauf_2025.pdf
-        </a>
-      </p>
-      <p>
-        <a href="#" onclick="downloadDoc(); return false;">
-          Lebenslauf als DOC (passwortgeschützt)
-        </a>
-      </p>
-      <iframe id="pdfViewer" style="width:100%; height:calc(100vh - 220px); border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Diplome -->
-  <section id="diplome">
-    <div class="container">
-      <h2>Diplome</h2>
-      <p>
-        Hier sind meine wichtigsten Zertifikate und Diplome zusammengefasst:
-      </p>
-      <p>
-        <a href="#" onclick="loadPDF('Diplome.pdf', 'pdfViewerDiplome'); return false;">
-          Diplome.pdf
-        </a>
-      </p>
-      <iframe id="pdfViewerDiplome" style="width:100%; height:calc(100vh - 220px); border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Zeugnisse -->
-  <section id="zeugnisse">
-    <div class="container">
-      <h2>Zeugnisse</h2>
-      <p>
-        <strong>Schulzeugnisse:</strong><br>
-        <a href="#" onclick="loadPDF('Schulzeugnisse.pdf', 'pdfViewerSchul'); return false;">
-          Schulzeugnisse.pdf
-        </a>
-      </p>
-      <iframe id="pdfViewerSchul" style="width:100%; height:calc(100vh - 220px); border:none; display:none;"></iframe>
-      <p>
-        <strong>Arbeitszeugnisse:</strong><br>
-        <a href="#" onclick="loadPDF('Arbeitszeugnisse.pdf', 'pdfViewerArbeits'); return false;">
-          Arbeitszeugnisse.pdf
-        </a>
-      </p>
-      <iframe id="pdfViewerArbeits" style="width:100%; height:calc(100vh - 220px); border:none; display:none;"></iframe>
-    </div>
-  </section>
-
-  <!-- Kontakt -->
-  <section id="kontakt">
-    <div class="container">
-      <h2>Kontakt</h2>
-      <p>
-        <strong>Adresse:</strong><br>
-        St. Niklausstrasse 8a<br>
-        3425 Koppigen, Schweiz
-      </p>
-      <p>
-        <strong>Mobile:</strong> +41 79 765 46 44
-      </p>
-      <p>
-        <strong>E-Mail:</strong>
-        <a href="mailto:matthias.kuhn1979@gmail.com">
-          matthias.kuhn1979@gmail.com
-        </a>
-      </p>
-      <p>
-        <strong>LinkedIn:</strong>
-        <a href="https://www.linkedin.com/in/matthiaskuhn1979/" target="_blank">
-          linkedin.com/in/matthiaskuhn1979/
-        </a>
-      </p>
-    </div>
-  </section>
-</main>
-
-<script>
-  // Hamburger-Menü (zeigt im Mobile Mode alle Nav-Punkte an)
-  function toggleMenu() {
-    if(document.body.classList.contains('mobile-mode')){
-      const navItems = document.querySelectorAll('#nav-list li');
-      navItems.forEach(li => li.style.display = 'block');
-    }
-  }
-
-  // Sektionen umschalten + Navigation aktualisieren
-  function showSection(id) {
-    // Alle Abschnitte ausblenden
-    const sections = document.querySelectorAll('main section');
-    sections.forEach(sec => sec.style.display = 'none');
-    // Gewünschten Abschnitt anzeigen
-    const section = document.getElementById(id);
-    if(section){
-      section.style.display = 'block';
-    }
-    // Navigation: Markiere aktiven Button und blende im Mobile Mode nur diesen ein
-    const navItems = document.querySelectorAll('#nav-list li');
-    navItems.forEach(li => {
-      li.querySelector('a').classList.remove('active');
-      // Im Desktop Mode alle Elemente sichtbar
-      if(!document.body.classList.contains('mobile-mode')){
-        li.style.display = 'block';
-      }
-    });
-    const activeNav = document.querySelector('#nav-' + id);
-    if(activeNav){
-      activeNav.querySelector('a').classList.add('active');
-      if(document.body.classList.contains('mobile-mode')){
-        // Nur den aktiven Button anzeigen
-        activeNav.style.display = 'block';
-      }
-    }
-  }
-
-  // Standardmäßig "Über mich" anzeigen
-  document.addEventListener("DOMContentLoaded", function() {
-    showSection('ueber-mich');
-  });
-
-  // PDF laden:
-  // In der Desktop-Version -> IFrame (fast die ganze Seite).
-  // In der Mobile Version -> Neues Fenster (Tab).
-  function loadPDF(file, viewerID) {
-    if(document.body.classList.contains('mobile-mode')){
-      // Mobile Mode => in neuem Tab öffnen
-      window.open(file, '_blank');
-    } else {
-      // Desktop => im IFrame, volle Höhe (bereinigt um fixierten Bereich)
-      const iframe = document.getElementById(viewerID);
-      iframe.src = file;
-      iframe.style.display = 'block';
-      // Scrolle ggf. zum iframe
-      iframe.scrollIntoView({ behavior: 'smooth' });
-    }
-  }
-
-  // Passwortgeschützter Download der DOC
-  function downloadDoc() {
-    const password = prompt("Bitte Passwort eingeben:");
-    if(password === "LL_MK$2025") {
-      window.location.href = "Lebenslauf_2025.docx";
-    } else {
-      alert("Falsches Passwort!");
-    }
-  }
-
-  // "Mobile Version" ein-/ausschalten
-  function toggleMobileMode() {
-    document.body.classList.toggle('mobile-mode');
-    // Im Mobile Mode: Zeige nur den aktiven Navigationsbutton,
-    // ansonsten alle Navigationselemente.
-    const navItems = document.querySelectorAll('#nav-list li');
-    navItems.forEach(li => {
-      li.style.display = document.body.classList.contains('mobile-mode') ?
-        (li.querySelector('a').classList.contains('active') ? 'block' : 'none')
-        : 'block';
-    });
-  }
-</script>
-
-</body>
-</html>
+Stellen Sie sicher, dass sich die Datei favicon.png im selben Verzeichnis befindet.
