--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <!-- Favicon / Icon-Datei -->
   <!-- Pfad anpassen, wenn du die Datei umbenennst oder in einem Unterordner hast -->
-  <link rel="icon" type="image/png" href="Icon%20Website.png" />
+  <link rel="icon" type="image/png" href="favicon.png" />
 
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
