--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>datafreak79.ch</title>
 
-<!-- Favicon / Icon-Datei -->
-<!-- Pfad anpassen, wenn du die Datei umbenennst oder in einem Unterordner hast -->
-<link rel="icon" type="image/png" href="favicon.png" />
+  <!-- Favicon / Icon-Datei (Pfad ggf. anpassen) -->
+  <link rel="icon" type="image/png" href="favicion.png" />
 
   <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
@@ -23,16 +22,15 @@
       color: #333;
     }
 
-    /* Um Banner + Header zu fixieren, packen wir sie in ein DIV-Container (#fixed-top) */
+    /* Fixierter Bereich: Banner und Header */
     #fixed-top {
       position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      z-index: 9999; /* Ganz vorne anzeigen */
+      z-index: 9999;
     }
 
-    /* Oberster Bereich (Copyright-Banner) */
     #top-banner {
       background-color: #007acc;
       color: #fff;
@@ -41,19 +39,16 @@
       font-size: 1rem;
     }
 
-    /* Header darunter */
     header {
       background-color: #007acc;
       color: white;
       padding: 20px;
     }
 
-    /* Damit Banner und Header normal im #fixed-top liegen können, ohne verschoben zu sein */
     #top-banner, header {
       position: static;
     }
 
-    /* Container im Header */
     .header-content {
       display: flex;
       justify-content: space-between;
@@ -68,7 +63,6 @@
       font-weight: bold;
     }
 
-    /* Button "Mobile Version" */
     .btn-mobile-version {
       background-color: #005f99;
       color: #fff;
@@ -86,9 +80,7 @@
       padding: 0;
       margin: 0;
       display: flex;
-    }
-    nav ul li {
-      margin: 0 5px;
+      gap: 5px;
     }
     nav ul li a {
       display: inline-block;
@@ -105,29 +97,22 @@
       background-color: #004f80;
     }
 
-    /* Hamburger-Icon bleibt sichtbar, um das Menü komplett anzuzeigen */
     .nav-toggle {
       cursor: pointer;
       font-size: 1.5rem;
     }
 
-    /* Im mobilen Modus werden standardmäßig nur der aktive Button angezeigt */
-    body.mobile-mode nav ul li {
-      display: none;
-    }
-    body.mobile-mode nav ul li.active {
-      display: block;
+    /* Standard Desktop Navigation */
+    nav ul li {
+      flex: 0 0 auto;
     }
 
-    /* Hauptbereich:
-       Da Banner + Header fixiert sind, muss der Inhalt darunter
-       entsprechend nach unten rutschen (margin-top).
-       Passe 220px an, wenn dein Banner+Header größer/kleiner ist. */
+    /* Main Content */
     main {
       max-width: 1200px;
       margin: 0 auto;
       padding: 20px;
-      margin-top: 220px; /* Platz für #fixed-top */
+      margin-top: 220px; /* Platz für fixierten Bereich */
     }
 
     main section {
@@ -155,46 +140,38 @@
 
     /* Responsive Verhalten */
     @media (max-width: 768px) {
+      /* Bei schmalen Bildschirmen bleibt die Navigation in einer Zeile und ist horizontal scrollbar */
       nav ul {
-        flex-direction: column;
+        overflow-x: auto;
+        white-space: nowrap;
       }
       nav ul li {
-        margin: 5px 0;
+        display: inline-block;
       }
       nav ul li a {
         padding: 6px 12px;
         font-size: 1rem;
       }
+      .header-content {
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
-
-    /* Anpassungen im Mobile Mode */
-    body.mobile-mode .header-content {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-
   </style>
 </head>
 <body>
 
 <!-- Fixierter Bereich: Banner + Header -->
 <div id="fixed-top">
-  <!-- Neuer oberster Bereich -->
   <div id="top-banner">
     &copy; 2025 datafreak79.ch | Erstellt mit ❤️ von Matthias Kuhn
   </div>
 
   <header>
     <div class="container header-content">
-      <!-- Titel/Logo -->
       <div class="logo">datafreak79.ch</div>
-
-      <!-- Button "Mobile Version" -->
       <button class="btn-mobile-version" onclick="toggleMobileMode()">Mobile Version</button>
-
-      <!-- Hamburger-Icon -->
       <div class="nav-toggle" onclick="toggleMenu()">&#9776;</div>
-      
       <nav>
         <ul id="nav-list">
           <li id="nav-ueber-mich"><a href="#" onclick="showSection('ueber-mich'); return false;">Über mich</a></li>
@@ -272,11 +249,7 @@
         vier Sprachen (Englisch, Französisch, Spanisch, Italienisch). Vokabeln
         können in selbst erstellbaren Sammlungen abgespeichert werden.
       </p>
-      <p>
-        <a href="Lernvideo_Sprachapp.mp4" target="_blank">
-          Lernvideo zur Sprachapp
-        </a> (MP4-Datei)
-      </p>
+      <!-- Lernvideo-Link wurde entfernt -->
       <p>
         <a href="https://uy3quo-matthias-kuhn.shinyapps.io/Translator_Excel/">
           Sprachapp (R-Shiny Desktop-Version)
@@ -303,6 +276,7 @@
           – Sprachschule in Exeter für Englischunterricht
         </li>
         <li>
+          <br>
           <strong>R for Data Science (Hadley Wickham):</strong>
           <a href="https://r4ds.had.co.nz/" target="_blank">
             https://r4ds.had.co.nz/
@@ -414,40 +388,27 @@
 </main>
 
 <script>
-  // Hamburger-Menü (zeigt im Mobile Mode alle Nav-Punkte an)
+  // Hamburger-Menü – falls benötigt (hier kann bei Bedarf weiter angepasst werden)
   function toggleMenu() {
-    if(document.body.classList.contains('mobile-mode')){
-      const navItems = document.querySelectorAll('#nav-list li');
-      navItems.forEach(li => li.style.display = 'block');
-    }
+    // Beispiel: Einfach alle Navigationselemente sichtbar machen.
+    const navItems = document.querySelectorAll('#nav-list li');
+    navItems.forEach(li => li.style.display = 'block');
   }
 
-  // Sektionen umschalten + Navigation aktualisieren
+  // Sektionen umschalten
   function showSection(id) {
-    // Alle Abschnitte ausblenden
     const sections = document.querySelectorAll('main section');
-    sections.forEach(sec => sec.style.display = 'none');
-    // Gewünschten Abschnitt anzeigen
+    sections.forEach(sec => sec.style.display = 'none'); // Alle verbergen
     const section = document.getElementById(id);
     if(section){
       section.style.display = 'block';
     }
-    // Navigation: Markiere aktiven Button und blende im Mobile Mode nur diesen ein
-    const navItems = document.querySelectorAll('#nav-list li');
-    navItems.forEach(li => {
-      li.querySelector('a').classList.remove('active');
-      // Im Desktop Mode alle Elemente sichtbar
-      if(!document.body.classList.contains('mobile-mode')){
-        li.style.display = 'block';
-      }
-    });
-    const activeNav = document.querySelector('#nav-' + id);
+    // Navigation: aktiven Link markieren
+    const navLinks = document.querySelectorAll('#nav-list a');
+    navLinks.forEach(link => link.classList.remove('active'));
+    const activeNav = document.querySelector('#nav-' + id + ' a');
     if(activeNav){
-      activeNav.querySelector('a').classList.add('active');
-      if(document.body.classList.contains('mobile-mode')){
-        // Nur den aktiven Button anzeigen
-        activeNav.style.display = 'block';
-      }
+      activeNav.classList.add('active');
     }
   }
 
@@ -456,19 +417,14 @@
     showSection('ueber-mich');
   });
 
-  // PDF laden:
-  // In der Desktop-Version -> IFrame (fast die ganze Seite).
-  // In der Mobile Version -> Neues Fenster (Tab).
+  // PDF laden
   function loadPDF(file, viewerID) {
     if(document.body.classList.contains('mobile-mode')){
-      // Mobile Mode => in neuem Tab öffnen
       window.open(file, '_blank');
     } else {
-      // Desktop => im IFrame, volle Höhe (bereinigt um fixierten Bereich)
       const iframe = document.getElementById(viewerID);
       iframe.src = file;
       iframe.style.display = 'block';
-      // Scrolle ggf. zum iframe
       iframe.scrollIntoView({ behavior: 'smooth' });
     }
   }
@@ -483,17 +439,10 @@
     }
   }
 
-  // "Mobile Version" ein-/ausschalten
+  // Mobile Version umschalten
   function toggleMobileMode() {
     document.body.classList.toggle('mobile-mode');
-    // Im Mobile Mode: Zeige nur den aktiven Navigationsbutton,
-    // ansonsten alle Navigationselemente.
-    const navItems = document.querySelectorAll('#nav-list li');
-    navItems.forEach(li => {
-      li.style.display = document.body.classList.contains('mobile-mode') ?
-        (li.querySelector('a').classList.contains('active') ? 'block' : 'none')
-        : 'block';
-    });
+    // Bei mobile-mode übernimmt die Navigation die horizontale Scrollbar
   }
 </script>
 
