--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   <section id="hobby">
     <div class="container">
       <h2>unser Goldschatz</h2>
-      <p><strong>Foxred Labrador Toska</strong></p>
+      <p><strong>Foxred Labrador Toska :-)</strong></p>
       <img src="Toska.JPG" alt="Toska" style="max-width:100%; height:auto; display:block; margin:0 auto;">
     </div>
   </section>
