--- a/index.html
+++ b/index.html
@@ -243,7 +243,9 @@
       </p>
       <p>
         Die Fähigkeiten, die ich im Weiterbildungskurs
-        <em>Data Scientist NDK HF</em> erworben habe, möchte ich nun in
+        <a href="https://www.ibaw.ch/informatik/coding-und-data-science/kurs/data-science-ndk-hf--0K_190518_2776_101" target="_blank">
+          <em>Data Scientist NDK HF</em>
+        </a> erworben habe, möchte ich nun in
         die Praxis umsetzen. Seit ich 2019 beim Hausbau meine erste
         Excel-Makrodatei zur Erstellung des Elektroinstallationsmaterials
         entwickelt habe, bin ich fasziniert von Daten und Programmierung.
